added option for folder upload

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </label>
         <label class="file-upload">
           <input onchange="uploadFolders()" type="file" id="folderUpload" directory webkitdirectory multiple />
-          <span>Browse Folders</span>
+          <span>Browse Folders (Beta)</span>
         </label>
       </div>
       <div id="tabSection" class="toolbar">
