added schedule task feat, need to implement user interface

--- a/index.html
+++ b/index.html
@@ -74,8 +74,11 @@
         </table>
       </div>
       <div class="progress-tab">
-        <h1>Transfer Status</h1>
         <div id="progressBar" class="upload-progress">
+          <h1>Transfer Status</h1>
+        </div>
+        <div id="chunkBar" class="chunk-status">
+          <h1>Chunk Transfer Status</h1>
         </div>
       </div>
     </div>
