--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <label for="username">File Name</label>
         <input type="text" id="fileName" placeholder="File name">
 
-        <label for="level">Level</label>
+        <label for="level">Compression Level</label>
         <input type="range" id="level" min="0" max="9" value="0">
 
         <div class="modal-actions">
