added share feature and other bug fixes

--- a/Pages/SignIn.html
+++ b/Pages/SignIn.html
@@ -23,7 +23,7 @@
       <input type="checkbox" onclick="showPassword()" />
       <span>Show password</span>
     </div>
-
+    <p>Don't have an account? <a href="./SignUp.html">Sign Up</a></p>
     <button onclick="HandleSignIn()" class="login-btn">Sign In</button>
   </div>
   <script src="./js/script.js"></script>
