--- a/Pages/SignUp.html
+++ b/Pages/SignUp.html
@@ -18,7 +18,9 @@
         <div class="show-password">
             <input type="checkbox" onclick="showPassword()" />
             <span>Show password</span>
-        </div> <button onclick="HandleSignUp()" class="login-btn">Sign Up</button>
+        </div> 
+        <p>Already a member? <a href="./SignIn.html">Sign In</a></p>
+        <button onclick="HandleSignUp()" class="login-btn">Sign Up</button>
     </div>
     <script src="./js/script.js"></script>
 </body>
