--- a/Pages/SignIn.html
+++ b/Pages/SignIn.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
+  <title>OurDrive | SignIn</title>
   <link rel="stylesheet" href="./Style/styles.css" />
 </head>
 
@@ -13,7 +13,11 @@
     <h1>Sign In</h1>
     <div id="loginFailed" class="loginFailed hidden">
       <p>Incorrect email or password.</p>
-      <p class="x-btn" onclick="closeBtn()">🗙</p>
+      <p class="x-btn" onclick="closeBtn()"><svg width="16" height="16" viewBox="0 0 16 16"
+          xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+          <path
+            d="M8.70701 8.00001L12.353 4.35401C12.548 4.15901 12.548 3.84201 12.353 3.64701C12.158 3.45201 11.841 3.45201 11.646 3.64701L8.00001 7.29301L4.35401 3.64701C4.15901 3.45201 3.84201 3.45201 3.64701 3.64701C3.45201 3.84201 3.45201 4.15901 3.64701 4.35401L7.29301 8.00001L3.64701 11.646C3.45201 11.841 3.45201 12.158 3.64701 12.353C3.74501 12.451 3.87301 12.499 4.00101 12.499C4.12901 12.499 4.25701 12.45 4.35501 12.353L8.00101 8.70701L11.647 12.353C11.745 12.451 11.873 12.499 12.001 12.499C12.129 12.499 12.257 12.45 12.355 12.353C12.55 12.158 12.55 11.841 12.355 11.646L8.70901 8.00001H8.70701Z" />
+        </svg></p>
     </div>
     <p>Email address</p>
     <input id="mail-input" class="mail-input" type="email" />
