--- a/index.html
+++ b/index.html
@@ -59,10 +59,15 @@
           <span onclick="deleteSelected()">Delete</span>
         </label>
         <label class="file-upload">
-          <span onclick="share()">Share</span>
+          <span onclick="openModal()">Compress</span>
         </label>
-        <label id="showCreatedBtn" class="file-upload">
-          <span onclick="showCreated()"><svg width="15" height="15" viewBox="0 0 16 16"
+        <label class="new-folder">
+          <span onclick="newFolder()">New Folder</span>
+          <input id="folderInput" class="folder-input" type="text" placeholder="Enter Folder Name" />
+        </label>
+        <label class="new-folder" id="showCreatedLabel">
+          <span onclick="share()">Share</span>
+          <span class="dropdown" onclick="showCreated()"><svg width="15" height="15" viewBox="0 0 16 16"
               xmlns="http://www.w3.org/2000/svg" fill="currentColor">
               <path
                 d="M3.14598 5.85423L7.64598 10.3542C7.84098 10.5492 8.15798 10.5492 8.35298 10.3542L12.853 5.85423C13.048 5.65923 13.048 5.34223 12.853 5.14723C12.658 4.95223 12.341 4.95223 12.146 5.14723L7.99998 9.29323L3.85398 5.14723C3.65898 4.95223 3.34198 4.95223 3.14698 5.14723C2.95198 5.34223 2.95098 5.65923 3.14598 5.85423Z" />
@@ -73,13 +78,6 @@
         <label class="new-folder">
           <span onclick="enterCode()">Enter Code</span>
           <input id="codeInput" class="folder-input" type="text" placeholder="Enter Code" />
-        </label>
-        <label class="file-upload">
-          <span onclick="openModal()">Compress</span>
-        </label>
-        <label class="new-folder">
-          <span onclick="newFolder()">New Folder</span>
-          <input id="folderInput" class="folder-input" type="text" placeholder="Enter Folder Name" />
         </label>
       </div>
       <div class="tableContainer">
